# pychemkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: unittest-workflow.yml
notebook/: elements.ipynb
notebook/.ipynb_checkpoints/: elements-checkpoint.ipynb
pychemkit/: compound.py  element.py  elements.db  engine.py  utils.py
pychemkit/core/: compound.py  element.py
pychemkit/database/: ELEMENTSDB.db  __init__.py  elements_data.py  engine.py  queries.py
pychemkit/foundations/: compound.py  element.py  reaction.py
pychemkit/stoich/: experimental.py  reaction.py
pychemkit/test/: test_element.py
pychemkit/utils/: utils.py
src/pychemkit/: __init__.py
src/pychemkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pychemkit/core/: exceptions.py
src/pychemkit/data/: __init__.py  loader.py
src/pychemkit/database/: engine.py  loader.py
src/pychemkit/engine/: PUBCHEMDB.db  __init__.py  conn.py
src/pychemkit/exceptions/: __init__.py  handlers.py  invalids.py
src/pychemkit/foundations/: compound.py  constants.py  element.py
src/pychemkit/foundations/.ipynb_checkpoints/: reaction-checkpoint.py
src/pychemkit/resources/: PubChemElements_all.json  elements_data.py  pubchem_data.py
src/pychemkit/stoich/: converter.py  experimental.py  reaction.py
src/pychemkit/utils/: __init__.py  scripts.py  utils.py
test/: test_compound.py  test_element.py  test_experimental.py  test_reaction_balancing.py  test_stoich.py
