[metadata]
name = pychemkit
description = A simple python package for general chemistry calculations and modeling
author = Glenn Laciapag
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    pychemkit
install_requires = 
    beautifulsoup4>=4.0
    flask>=2.0
    numpy>=1.22
    pandas>=1.4
    pip>=22.1
    scipy>=1.8
    sqlalchemy>=1.4
    sympy>=1.10
python_requires = >=3.6
package_dir =
    =src
zip_safe = no







